--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="mystyle.css">
     <body>
         
-            <img src="C:\Users\TUF\Downloads\Angelo-img.jpg" alt="" class="img-letter">
+            <img src="https://i.imgur.com/bVbaeBk.jpg" alt="" class="img-letter">
 
             <nav class="number-one">
                 <ul>
@@ -18,7 +18,7 @@
             <h1 class="h-one">My Personal Portfolio</h1>
             
             <div class="container"> 
-                <img src="C:\Users\TUF\Downloads\angelo.png" alt="angelo.png" class="img-angelo">
+                <img src="https://i.imgur.com/vpVUg5V.png" class="img-angelo">
                 <h1 class="h-two">Personal Portfolio</h1>
                 <h2>Welcome!</h2>
                 <p class="p-one">In this portfolio you will see my previous activity.</p>
@@ -31,10 +31,10 @@
             <div class="contaner-two">
             <h1 class="h-three">Portfolio</h1>  
                 <div class="image">         
-            <img class="img" src="C:\Users\TUF\OneDrive\Pictures\Screenshots\Screenshot (81).png"  height="200" width="200">
-            <img class="img" src="C:\Users\TUF\OneDrive\Pictures\Screenshots\Screenshot (82).png"  height="200" width="200">
-            <img class="img" src= "C:\Users\TUF\OneDrive\Pictures\Screenshots\Screenshot (83).png" height="200" width="200">
-            <img class="img" src="C:\Users\TUF\OneDrive\Pictures\Screenshots\Screenshot (84).png" height="200" width="200">
+            <img class="img" src="https://i.imgur.com/f6dCoAy.png"  height="200" width="200">
+            <img class="img" src="https://i.imgur.com/eKHfrSt.png"  height="200" width="200">
+            <img class="img" src= "https://i.imgur.com/C5WUWHW.png" height="200" width="200">
+            <img class="img" src="https://i.imgur.com/DKG47Ci.png" height="200" width="200">
                 </div>
             </div>
 
